fix: .alacritty file + README.md update

--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -1,18 +1,16 @@
+# Windows
+#shell:
+#  program: "C:\\Program Files\\Git\\bin\\bash.exe"
+#key_bindings:
+#  - { key: T, mods: Control|Alt, action: SpawnNewInstance }
+
 selection:
   save_to_clipboard: true
-
-shell:
-  program: "C:\\Program Files\\Git\\bin\\bash.exe"
-
+    
 window:
   opacity: 0.9
   decorations: full
   padding:
     x: 15
     y: 15
-  startup_mode: Fullscreen
-
-key_bindings:
-  - { key: T, mods: Control|Alt, action: SpawnNewInstance }
-
-working_directory: 'C:/Users/aleja/'  
+  startup_mode: Windowed
