--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -1,9 +1,3 @@
-# Windows
-#shell:
-#  program: "C:\\Program Files\\Git\\bin\\bash.exe"
-#key_bindings:
-#  - { key: T, mods: Control|Alt, action: SpawnNewInstance }
-
 selection:
   save_to_clipboard: true
     
@@ -11,6 +5,17 @@ window:
   opacity: 0.9
   decorations: full
   padding:
-    x: 15
-    y: 15
+    x: 5
+    y: 5
   startup_mode: Windowed
+
+font:
+  size: 10
+  normal:
+    family: Hack
+    style: Regular
+
+colors:
+  primary:
+    background: '#1e2229'
+    foreground: '#c5c8c6'
