--- a/config/ubuntu/autoinstall.yaml
+++ b/config/ubuntu/autoinstall.yaml
@@ -42,5 +42,6 @@ autoinstall:
 
   late-commands:
     - curtin in-target curl -o- -L https://slss.io/install | bash
-    # - curtin in-target usermod -aG docker probua
+    - curtin in-target curl -o- -L https://raw.githubusercontent.com/probua/home/main/config/ubuntu/install-kmonad.sh | bash
+    - curtin in-target usermod -aG docker probua
     - curtin in-target usermod -aG video probua
